@@ -1,7 +1,7 @@
-/**
+/*
  * The MIT License
  *
- * Copyright (c) 2009-2019 PrimeTek
+ * Copyright (c) 2009-2020 PrimeTek
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,29 +23,36 @@
  */
 package org.primefaces.context;
 
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.nio.file.spi.FileTypeDetector;
-import java.util.Map;
-import java.util.ServiceLoader;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import javax.faces.FacesException;
-import javax.faces.context.FacesContext;
-import javax.servlet.ServletContext;
-import javax.validation.Validation;
-import javax.validation.Validator;
-import javax.validation.ValidatorFactory;
 import org.primefaces.cache.CacheProvider;
 import org.primefaces.cache.DefaultCacheProvider;
-
+import org.primefaces.component.fileupload.FileUploadDecoder;
 import org.primefaces.config.PrimeConfiguration;
 import org.primefaces.config.PrimeEnvironment;
 import org.primefaces.util.Constants;
 import org.primefaces.util.LangUtils;
 import org.primefaces.util.Lazy;
 import org.primefaces.virusscan.VirusScannerService;
+import org.primefaces.webapp.FileUploadChunksServlet;
+
+import javax.faces.FacesException;
+import javax.faces.context.FacesContext;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletRegistration;
+import javax.servlet.http.HttpServletRequest;
+import javax.validation.Validation;
+import javax.validation.Validator;
+import javax.validation.ValidatorFactory;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.nio.file.spi.FileTypeDetector;
+import java.util.Collection;
+import java.util.Map;
+import java.util.ServiceLoader;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 /**
  * A {@link PrimeApplicationContext} is a contextual store for the current application.
@@ -72,6 +79,8 @@ public class PrimeApplicationContext {
     private final Lazy<CacheProvider> cacheProvider;
     private final Lazy<VirusScannerService> virusScannerService;
     private FileTypeDetector fileTypeDetector;
+    private FileUploadDecoder fileUploadDecoder;
+    private String fileUploadResumeUrl;
 
     public PrimeApplicationContext(FacesContext facesContext) {
         environment = new PrimeEnvironment(facesContext);
@@ -140,13 +149,46 @@ public class PrimeApplicationContext {
             }
             else {
                 try {
-                    return (CacheProvider) LangUtils.loadClassForName(cacheProviderConfigValue).newInstance();
+                    Class<? extends CacheProvider> cacheProviderClazz = LangUtils.loadClassForName(cacheProviderConfigValue);
+                    return cacheProviderClazz.getConstructor().newInstance();
                 }
-                catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                catch (NoSuchMethodException | ClassNotFoundException | InstantiationException
+                        | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
                     throw new FacesException(ex);
                 }
             }
         });
+
+        resolveFileUploadDecoder();
+
+        resolveFileUploadResumeUrl(facesContext);
+    }
+
+    private void resolveFileUploadResumeUrl(FacesContext facesContext) {
+        Object request = facesContext.getExternalContext().getRequest();
+        if (request instanceof HttpServletRequest) {
+            fileUploadResumeUrl = ((HttpServletRequest) request).getServletContext().getServletRegistrations().values().stream()
+                    .filter(s -> FileUploadChunksServlet.class.getName().equals(s.getClassName()))
+                    .findFirst()
+                    .map(ServletRegistration::getMappings)
+                    .map(Collection::stream)
+                    .flatMap(Stream::findFirst)
+                    .map(s -> facesContext.getExternalContext().getApplicationContextPath() + s)
+                    .orElse(null);
+        }
+    }
+
+    private void resolveFileUploadDecoder() {
+        String uploader = config.getUploader();
+        if ("auto".equals(uploader)) {
+            uploader = environment.isAtLeastJsf22() ? "native" : "commons";
+        }
+
+        String finalUploader = uploader;
+        fileUploadDecoder = StreamSupport.stream(ServiceLoader.load(FileUploadDecoder.class, applicationClassLoader).spliterator(), false)
+                .filter(d -> d.getName().equals(finalUploader))
+                .findFirst()
+                .orElseThrow(() -> new FacesException("FileUploaderDecoder '" + finalUploader + "' not found"));
     }
 
     public static PrimeApplicationContext getCurrentInstance(FacesContext facesContext) {
@@ -223,5 +265,13 @@ public class PrimeApplicationContext {
                 validatorFactory.get().close();
             }
         }
+    }
+
+    public FileUploadDecoder getFileUploadDecoder() {
+        return fileUploadDecoder;
+    }
+
+    public String getFileUploadResumeUrl() {
+        return fileUploadResumeUrl;
     }
 }
